# UdemyCppPro

Chapter02/: test.txt
Chapter03/10_Doxygen/: CMakeLists.txt
Chapter03/10_UnitTests/: CMakeLists.txt
Chapter03/10_UnitTests/src/my_lib/: my_lib.cc  my_lib.h
Chapter03/10_UnitTests/tests/: CMakeLists.txt  main.cc
Chapter03/1_HelloWorld/: CMakeLists.txt
Chapter03/4_VariablesOptions/: CMakeLists.txt
Chapter03/5_ConfigureFile/: CMakeLists.txt
Chapter03/7_Submodules/: CMakeLists.txt
Chapter03/8_FetchContent/: CMakeLists.txt
Chapter03/8_FetchContent/app/: main.cc
Chapter03/9_Conan/: CMakeLists.txt
Chapter03/9_Doxygen/: CMakeLists.txt
Chapter03/9_Doxygen/src/my_lib/: CMakeLists.txt  my_lib.cc
